Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;
C13DRVAPI ERRVAL __stdcall C13_CECISWrites(LPUSHORT value,USHORT addr,USHORT count,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEDeregisterClient(VOID);
C13DRVAPI VOID __stdcall C13_CEErrorClear(VOID);
C13DRVAPI USHORT __stdcall C13_CEErrorCount(VOID);
C13DRVAPI ERRVAL __stdcall C13_CEErrorValue(USHORT index);
C13DRVAPI ERRVAL __stdcall C13_CEFiveVoltConfig(INT socketval);
C13DRVAPI USHORT __stdcall C13_CEFuncID(VOID);
C13DRVAPI ERRVAL __stdcall C13_CEIOAttrConfig(USHORT attrval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEIOBaseConfig(USHORT baseval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEIRQAttrConfig(USHORT attrval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEIRQIrqConfig(USHORT irqval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEMapMemory(ULONG offset,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEMemAttrConfig(USHORT attrval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEMemBaseConfig(USHORT baseval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEMemSizeConfig(ULONG sizeval,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEMemSpeedConfig(USHORT speedval,INT socketval);
C13DRVAPI BOOL __stdcall C13_CEPresent(VOID);
C13DRVAPI ERRVAL __stdcall C13_CERegisterClient(VOID);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseAll(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseConfig(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseDMA(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseIO(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseIRQ(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReleaseMemory(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestAll(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestConfig(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestDMA(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestIO(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestIRQ(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERequestMemory(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEReset(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEResetCheck(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEResetError(INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CERestartAll(INT socketval);
C13DRVAPI VOID __stdcall C13_CEVarConfig(ULONG value,USHORT symbol,INT socketval);
C13DRVAPI VOID __stdcall C13_CEVarDefault(INT socketval);
C13DRVAPI ULONG __stdcall C13_CEVarQuery(USHORT symbol,INT socketval);
C13DRVAPI ERRVAL __stdcall C13_CEZeroVoltConfig(INT socketval);
C13DRVAPI ULONG __stdcall C13_CmdAddr(SCHNDX index,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdAlloc(INT count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdAllocEx(ULONG configval,INT count,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_CmdBaseRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdBaseWr(ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdClear(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCountRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCountWr(USHORT countval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCtrlRd(SCHNDX index,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdCurrRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdCurrWr(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdInit(USHORT opcode,LPUSHORT block);
C13DRVAPI SCHNDX __stdcall C13_CmdInsert(LPUSHORT block,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdMaxRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdMaxWr(USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdShotWr(BOOL value,SCHNDX index,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdStackClear(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_CmdStartRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdStartWr(USHORT addrval,HCARD handleval);
C13DRVAPI INT __stdcall C13_CmdTotalRd(HCARD handleval);
C13DRVAPI VOID __stdcall C13_CmdTotalWr(INT countval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCall(ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCheck(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommCheckEx(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommConfig(BOOL enableflag,USHORT command,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdL(LPULONG valueptr,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataRdW(LPUSHORT valueptr,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataWrL(ULONG value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataWrW(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDisable(USHORT command,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommEnable(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommErrRdsW(LPUSHORT errbuf,USHORT errbufcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommErrWrsW(LPUSHORT errbuf,USHORT errbufcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommGlobRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommGlobWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommInfoRdsW(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommProgRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommProgWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT progptr,USHORT progcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommStart(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommStop(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CSAdjustResourceInfo(USHORT action,USHORT resource,LPVOID resourceinfo,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSAdjustResourceInfoDma(USHORT action,LPVOID dmainfo,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSAdjustResourceInfoIo(USHORT action,LPVOID ioinfo,LPVOID clientinfo);