Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.VB

    Public Declare Function C13_CECISWrites Lib "C13W32.DLL" Alias "" (ByRef value As UInt16, ByVal addr As UInt16, ByVal count As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEDeregisterClient Lib "C13W32.DLL" Alias "" () As Int32
    Public Declare Sub C13_CEErrorClear Lib "C13W32.DLL" Alias "" ()
    Public Declare Function C13_CEErrorCount Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CEErrorValue Lib "C13W32.DLL" Alias "" (ByVal index As UInt16) As Int32
    Public Declare Function C13_CEFiveVoltConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEFuncID Lib "C13W32.DLL" Alias "" () As UInt16
    Public Declare Function C13_CEIOAttrConfig Lib "C13W32.DLL" Alias "" (ByVal attrval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEIOBaseConfig Lib "C13W32.DLL" Alias "" (ByVal basevalval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEIRQAttrConfig Lib "C13W32.DLL" Alias "" (ByVal attrval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEIRQIrqConfig Lib "C13W32.DLL" Alias "" (ByVal irqval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEMapMemory Lib "C13W32.DLL" Alias "" (ByVal offset As UInt32, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEMemAttrConfig Lib "C13W32.DLL" Alias "" (ByVal attrval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEMemBaseConfig Lib "C13W32.DLL" Alias "" (ByVal basevalval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEMemSizeConfig Lib "C13W32.DLL" Alias "" (ByVal sizeval As UInt32, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEMemSpeedConfig Lib "C13W32.DLL" Alias "" (ByVal speedval As UInt16, ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEPresent Lib "C13W32.DLL" Alias "" () As Int32
    Public Declare Function C13_CERegisterClient Lib "C13W32.DLL" Alias "" () As Int32
    Public Declare Function C13_CEReleaseAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReleaseConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReleaseDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReleaseIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReleaseIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReleaseMemory Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERequestMemory Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEReset Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEResetCheck Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CEResetError Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CERestartAll Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Sub C13_CEVarConfig Lib "C13W32.DLL" Alias "" (ByVal value As UInt32, ByVal symbol As UInt16, ByVal socketval As Int32)
    Public Declare Sub C13_CEVarDefault Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32)
    Public Declare Function C13_CEVarQuery Lib "C13W32.DLL" Alias "" (ByVal symbol As UInt16, ByVal socketval As Int32) As UInt32
    Public Declare Function C13_CEZeroVoltConfig Lib "C13W32.DLL" Alias "" (ByVal socketval As Int32) As Int32
    Public Declare Function C13_CmdAddr Lib "C13W32.DLL" Alias "_C13_CmdAddr@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_CmdAlloc Lib "C13W32.DLL" Alias "_C13_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_CmdAllocEx Lib "C13W32.DLL" Alias "_C13_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C13_CmdBaseRd Lib "C13W32.DLL" Alias "_C13_CmdBaseRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub C13_CmdBaseWr Lib "C13W32.DLL" Alias "_C13_CmdBaseWr@8" (ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function C13_CmdClear Lib "C13W32.DLL" Alias "_C13_CmdClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CmdCountRd Lib "C13W32.DLL" Alias "_C13_CmdCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_CmdCountWr Lib "C13W32.DLL" Alias "_C13_CmdCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_CmdCtrlRd Lib "C13W32.DLL" Alias "_C13_CmdCtrlRd@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_CmdCtrlWr Lib "C13W32.DLL" Alias "_C13_CmdCtrlWr@12" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_CmdCurrRd Lib "C13W32.DLL" Alias "_C13_CmdCurrRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_CmdCurrWr Lib "C13W32.DLL" Alias "_C13_CmdCurrWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C13_CmdInit Lib "C13W32.DLL" Alias "_C13_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function C13_CmdInsert Lib "C13W32.DLL" Alias "_C13_CmdInsert@8" (ByRef block As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CmdMaxRd Lib "C13W32.DLL" Alias "_C13_CmdMaxRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_CmdMaxWr Lib "C13W32.DLL" Alias "_C13_CmdMaxWr@8" (ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_CmdRd Lib "C13W32.DLL" Alias "_C13_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CmdShotWr Lib "C13W32.DLL" Alias "_C13_CmdShotWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CmdSkipWr Lib "C13W32.DLL" Alias "_C13_CmdSkipWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C13_CmdStackClear Lib "C13W32.DLL" Alias "_C13_CmdStackClear@4" (ByVal handleval As UInt32)
    Public Declare Function C13_CmdStartRd Lib "C13W32.DLL" Alias "_C13_CmdStartRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub C13_CmdStartWr Lib "C13W32.DLL" Alias "_C13_CmdStartWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C13_CmdTotalRd Lib "C13W32.DLL" Alias "_C13_CmdTotalRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub C13_CmdTotalWr Lib "C13W32.DLL" Alias "_C13_CmdTotalWr@8" (ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function C13_CmdWr Lib "C13W32.DLL" Alias "_C13_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommCall Lib "C13W32.DLL" Alias "_C13_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommCheck Lib "C13W32.DLL" Alias "_C13_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommCheckEx Lib "C13W32.DLL" Alias "_C13_CommCheckEx@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommConfig Lib "C13W32.DLL" Alias "_C13_CommConfig@12" (ByVal enableflag As Int32, ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataRdL Lib "C13W32.DLL" Alias "_C13_CommDataRdL@12" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataRdsW Lib "C13W32.DLL" Alias "_C13_CommDataRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataRdW Lib "C13W32.DLL" Alias "_C13_CommDataRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataWrL Lib "C13W32.DLL" Alias "_C13_CommDataWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataWrsW Lib "C13W32.DLL" Alias "_C13_CommDataWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDataWrW Lib "C13W32.DLL" Alias "_C13_CommDataWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommDisable Lib "C13W32.DLL" Alias "_C13_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommEnable Lib "C13W32.DLL" Alias "_C13_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommErrRdsW Lib "C13W32.DLL" Alias "_C13_CommErrRdsW@12" (ByRef errbuf As UInt16, ByVal errbufcount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommErrWrsW Lib "C13W32.DLL" Alias "_C13_CommErrWrsW@12" (ByRef errbuf As UInt16, ByVal errbufcount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommGlobRdW Lib "C13W32.DLL" Alias "_C13_CommGlobRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommGlobWrW Lib "C13W32.DLL" Alias "_C13_CommGlobWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommInfoRdsW Lib "C13W32.DLL" Alias "_C13_CommInfoRdsW@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommProgRdW Lib "C13W32.DLL" Alias "_C13_CommProgRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommProgWrW Lib "C13W32.DLL" Alias "_C13_CommProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommRun Lib "C13W32.DLL" Alias "_C13_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef progptr As UInt16, ByVal progcount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommStart Lib "C13W32.DLL" Alias "_C13_CommStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CommStop Lib "C13W32.DLL" Alias "_C13_CommStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C13_CSAdjustResourceInfo Lib "C13W32.DLL" Alias "" (ByVal action As UInt16, ByVal resource As UInt16, ByVal resourceinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSAdjustResourceInfoDma Lib "C13W32.DLL" Alias "" (ByVal action As UInt16, ByVal dmainfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
    Public Declare Function C13_CSAdjustResourceInfoIo Lib "C13W32.DLL" Alias "" (ByVal action As UInt16, ByVal ioinfo As IntPtr, ByVal clientinfo As IntPtr) As Int32
